# 5g-network-simulator-cpp

./: CMakeLists.txt  LICENSE  README.md
include/common/: Logger.h  Message.h
include/ue/: UE.h
src/: main.cpp
src/core/: CoreNetwork.cpp  CoreNetwork.h
src/gnb/: gNB.cpp  gNB.h
src/ue/: UE.cpp
